# documento-client

./: .gitignore  .gitlab-ci.yml  README.md  build-deb.sh  build-flatpak.sh  de.jonathanweth.documento.client.desktop  de.jonathanweth.documento.client.yml  pyproject.toml  tox.ini
.github/workflows/: lint.yml  reformat.yml
debian/: changelog  control  copyright  documento-client.install  documento-client.links
documento_client/: api_manager.py  constants.py  delegate.py  login.ui  login_dialog.py  main.py  main.ui  progress.ui  progress_dialog.py  save.ui  save_dialog.py  scan_manager.py  scan_object.py  ui_manager.py  util.py
