[tool.poetry]
name = "documento-client"
version = "0.1.0"
description = ""
authors = ["Jonathan Weth <dev@jonathanweth.de>"]

[tool.poetry.dependencies]
python = "^3.6,<3.10"
PySide2 = "^5.15.2"
python-sane = "^2.9.1"
pytesseract = "^0.3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
