[tool.poetry]
name = "documento-client"
version = "0.1.0"
description = ""
authors = ["Jonathan Weth <dev@jonathanweth.de>"]

[tool.poetry.dependencies]
python = "^3.6,<3.10"
PySide2 = "^5.15.2"
python-sane = "^2.9.1"
pytesseract = "^0.3.7"

[tool.poetry.dev-dependencies]
sphinx = "^3.5"
sphinx-autodoc-typehints = "^1.7"
pytest = "^6.0"
safety = "^1.8.5"
flake8 = "^3.9.0"
flake8-fixme = "^1.1.1"
flake8-mypy = "^17.8.0"
flake8-bandit = "^2.1.2"
flake8-builtins = "^1.4.1"
flake8-docstrings = "^1.5.0"
flake8-rst-docstrings = "^0.0.14"
black = "^19.10b0"
flake8-black = "^0.2.0"
isort = "^5.8.0"
flake8-isort = "^4.0.0"
pytest-cov = "^2.8.1"
pytest-sugar = "^0.9.2"
tox = "^3.23.0"

[tool.black]
line-length = 100

[tool.poetry.scripts]
documento-client = "documento_client.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
